--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "filestream": "^5.0.0",
     "fs": "0.0.1-security",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.5",
